--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">CleanArchiSample</string>
-    <string name="title_activity_git_hub_fork_list">GitHubForkListActivity</string>
+    <string name="title_activity_git_hub_fork_list">GitHub Fork List</string>
     <string name="git_hub_fork_list_load_error">An error occurred, we could not load the data…</string>
     <string name="git_hub_fork_list_nothing_to_show">Their is no data to from the server…</string>
+    <string name="detail_label">Details</string>
 </resources>
